changes to flash and register

--- a/app/views/pages/about.ejs
+++ b/app/views/pages/about.ejs
@@ -4,29 +4,31 @@
     <% include ../partials/global_nav %>
     
     <div class="container">
-        <header>
-        	<h1><%= pageTitle %></h1>
-        </header>
-        
-        <p>We combine industry expertise with innovative technology to deliver critical information to leading decision makers in the financial and risk, legal, tax and accounting, intellectual property and science and media markets, powered by the world's most trusted news organization.</p>
+        <div class="innerWrap">
+            <header>
+            	<h1><%= pageTitle %></h1>
+            </header>
+            
+            <p>We combine industry expertise with innovative technology to deliver critical information to leading decision makers in the financial and risk, legal, tax and accounting, intellectual property and science and media markets, powered by the world's most trusted news organization.</p>
 
-        <p>Thomson Reuters shares are listed on the Toronto and New York Stock Exchanges (symbol: TRI). </p>
+            <p>Thomson Reuters shares are listed on the Toronto and New York Stock Exchanges (symbol: TRI). </p>
 
 
-        <figure>
-        	<img src="https://scontent-iad3-1.xx.fbcdn.net/hphotos-xfa1/v/t1.0-9/542941_10102930241145144_830203166_n.jpg?oh=f055baefb0f6dc68e57fa80d243a2aac&oe=5614D7F3" alt="Founders Barb and Greg">
-        </figure>
+            <figure>
+            	<img src="https://scontent-iad3-1.xx.fbcdn.net/hphotos-xfa1/v/t1.0-9/542941_10102930241145144_830203166_n.jpg?oh=f055baefb0f6dc68e57fa80d243a2aac&oe=5614D7F3" alt="Founders Barb and Greg">
+            </figure>
 
-        <p>We combine industry expertise with innovative technology to deliver critical information to leading decision makers in the financial and risk, legal, tax and accounting, intellectual property and science and media markets, powered by the world's most trusted news organization.</p>
+            <p>We combine industry expertise with innovative technology to deliver critical information to leading decision makers in the financial and risk, legal, tax and accounting, intellectual property and science and media markets, powered by the world's most trusted news organization.</p>
 
-        <h2>This part</h2>
-        <p>We combine industry expertise with innovative technology to deliver critical information to leading decision makers in the financial and risk, legal, tax and accounting, intellectual property and science and media markets, powered by the world's most trusted news organization.</p>
+            <h2>This part</h2>
+            <p>We combine industry expertise with innovative technology to deliver critical information to leading decision makers in the financial and risk, legal, tax and accounting, intellectual property and science and media markets, powered by the world's most trusted news organization.</p>
 
-        <code> 
-        	.code {color: red;} 
-        </code>
+            <code> 
+            	.code {color: red;} 
+            </code>
 
-        <p>We combine industry expertise with innovative technology to deliver critical information to leading decision makers in the financial and risk, legal, tax and accounting, intellectual property and science and media markets, powered by the world's most trusted news organization.</p>
+            <p>We combine industry expertise with innovative technology to deliver critical information to leading decision makers in the financial and risk, legal, tax and accounting, intellectual property and science and media markets, powered by the world's most trusted news organization.</p>
+        </div>
     </div>
     
     <% include ../partials/footer %>
