--- a/app/views/pages/card_all.ejs
+++ b/app/views/pages/card_all.ejs
@@ -4,6 +4,7 @@
     <% include ../partials/global_nav %>
 
     <div class="container">
+        <div class="innerWrap">
         <h1><%= pageTitle %></h1>
         
         <% if(cards.length == 0) { %>
@@ -24,6 +25,7 @@
 				</li>
 			<%	}	%>
 		</ul>
+        </div>
     </div>
     
 
