--- a/app/views/pages/orders_all.ejs
+++ b/app/views/pages/orders_all.ejs
@@ -4,23 +4,24 @@
     <% include ../partials/global_nav %>
 
     <div class="container">
-        <h1><%= pageTitle %></h1>
+        <div class="innerWrap">
+            <h1><%= pageTitle %></h1>
 
-        <% if(orders.length == 0) { %>
-        <div> Aint got nothing to show ya</div>
-        <% } %>
-        
-        <ul>
-			<%	for (var i = 0; i < orders.length; i++) {	%>
-				<li style="border:1px solid #DDD; margin: 10px;">
-					<%= orders.date %>
-                    <br>
-                    <%= orders.amount %>
-				</li>
-			<%	}	%>
-		</ul>
+            <% if(orders.length == 0) { %>
+            <div> Aint got nothing to show ya</div>
+            <% } %>
+            
+            <ul>
+    			<%	for (var i = 0; i < orders.length; i++) {	%>
+    				<li style="border:1px solid #DDD; margin: 10px;">
+    					<%= orders.date %>
+                        <br>
+                        <%= orders.amount %>
+    				</li>
+    			<%	}	%>
+    		</ul>
+        </div>
     </div>
- 
  
      <% include ../partials/footer %>
 
