--- a/app/views/pages/signin.ejs
+++ b/app/views/pages/signin.ejs
@@ -1,40 +1,42 @@
 <% include ../partials/head %>
 
 <body>
-    <% include ../partials/global_nav %>
-
-    
-    
     <div class="container">
-        <h1><%= pageTitle %></h1>
-        <form accept-charset="UTF-8" method="post">
-        	<!-- Sign in with: <br>
-        	<a href="/auth/facebook">Facebook</a>
-        	<a href="/auth/twitter">Twitter</a>
-			<br><br> -->
-			
-			<div class="formGroup formGroup--stacked">
-				<label for="username">Username or Email</label>
-				<input type="text" name="username" id="username" value="" tabindex="1" autocorrect="off" autocapitalize="off" autofocus="true" class="input">
-			</div>
+	    <div class="innerWrap">
+	        	
+	       	<h1><a href="/">Greeting Cardinal</a></h1>
+			<h2><%= pageTitle %></h2>
+	        
+	        <form accept-charset="UTF-8" method="post">
+	        	<!-- Sign in with: <br>
+	        	<a href="/auth/facebook">Facebook</a>
+	        	<a href="/auth/twitter">Twitter</a>
+				<br><br> -->
+				
+				<div class="formGroup formGroup--stacked">
+					<label for="username">Username or Email</label>
+					<input type="text" name="username" id="username" value="" tabindex="1" autocorrect="off" autocapitalize="off" autofocus="true" class="input">
+				</div>
 
-			<div class="formGroup formGroup--stacked">
-				<label for="password">Password</label>
-				<input type="password" name="password" id="password" value="" tabindex="2" class="input">
-			</div>
+				<div class="formGroup formGroup--stacked">
+					<label for="password">Password</label>
+					<input type="password" name="password" id="password" value="" tabindex="2" class="input">
+				</div>
 
-			<div class="formGroup formGroup--stacked">
-				<label for="remember">
-					<input type="checkbox" id="remember" name="remember" value="remember" checked="checked"> Remember me
-				</label>
-			</div>
+				<div class="formGroup formGroup--stacked">
+					<label for="remember">
+						<input type="checkbox" id="remember" name="remember" value="remember" checked="checked"> Remember me
+					</label>
+				</div>
 
-			<br><br>
-			
-			<input type="submit" value="Sign In" class="btn btn--primary" tabindex="3">
+				<br><br>
+				
+				<input type="submit" value="Sign In" class="btn btn--primary" tabindex="3">
+			</form>
 
-		</form>
+			<p>Not a member? <a href="/i/register">Register</a></p>
+
+	    </div>
     </div>
-
 </body>
 </html>
