--- a/app/views/partials/flash.ejs
+++ b/app/views/partials/flash.ejs
@@ -1,17 +1,23 @@
 <% if(messages.error) { %>
-    <div class="alert alert-danger fade in" style="background:pink; padding: 20px; ">
+    <div class="notice notice--warning fade in">
         <% for (var i=0; i< messages.error.length; i++) { %> 
-            <p><%= messages.error[i].msg %> </p>  
+            <p class="notice_title"><%= messages.error[i].msg %> </p>  
         <% } %> 
     </div>
 <% } %>
 
-
 <% if(messages.info) { %>
-    <div class="alert alert-danger fade in" style="background:grey;  padding: 20px; ">
-        <button class="close" style="float:right" type="button" data-dismiss="alert" aria-label="Close">x</button>
+    <div class="notice notice--info fade in">
         <% for (var i=0; i< messages.info.length; i++) { %> 
-            <p><%= messages.info[i].msg %> </p>  
+            <p class="notice_title"><%= messages.info[i].msg %> </p>  
+        <% } %> 
+    </div>
+<% } %>
+
+<% if(messages.success) { %>
+    <div class="notice notice--success fade in">
+        <% for (var i=0; i< messages.info.length; i++) { %> 
+            <p class="notice_title"><%= messages.info[i].msg %> </p>  
         <% } %> 
     </div>
 <% } %>
