--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,11 +25,14 @@ a:hover {
     width: 960px;
     margin: 0 auto;
 }
+
+.innerWrap {
+  padding: 20px 12px 30px 12px
+}
 .layout_nav {
     background:#EEE;
     padding: .75em; 
     border-bottom: 1px solid #DDD;
-    margin-bottom:24px;
 }
 .layout_nav a {
     margin-right: 1em;
@@ -158,4 +161,48 @@ img {
 }
 .formGroup--stacked label {
   display: block;
+}
+
+
+
+/*Notices*/
+
+.notice {
+  padding: 10px 12px;
+  font-weight: normal;
+  text-align: left;
+  color: #fff;
+  border-top: 1px solid #85aed3;
+  border-bottom: 1px solid #ccc;
+  background: #618fb9 url(/img/assets/infolines.png) repeat-x top left;
+}
+.notice_title {
+  width: 960px;
+  text-align: center;
+  margin: 0 auto;
+  color:#FFF;
+}
+
+.notice--success {
+  border-top-color: #a4d178;
+  background-color: #8aba56;
+}
+.notice--info {
+  border-top-color: #85aed3;
+  background-color: #618fb9;
+}
+.notice--warning {
+  border-top-color: #fb6161;
+  background-color: #df3b3b;
+}
+
+
+/*cart*/
+.cart {
+  margin: 0 0 0 0;
+  padding: 0;
+}
+.cart li {
+  list-style: none;
+  border-bottom: 1px solid #DDD;
 }
