Added conditional check to Edit

--- a/app/views/pages/register.ejs
+++ b/app/views/pages/register.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/head %>
 
 <body>
-
+	<% include ../partials/flash %>
     <div class="container">
 	    <div class="innerWrap">
 	        <h1><a href="/">Greeting Cardinal</a></h1>
