--- a/app/views/pages/signin.ejs
+++ b/app/views/pages/signin.ejs
@@ -1,6 +1,7 @@
 <% include ../partials/head %>
 
 <body>
+	<% include ../partials/flash %>
     <div class="container">
 	    <div class="innerWrap">
 	        	
