--- a/public/css/style.css
+++ b/public/css/style.css
@@ -155,6 +155,10 @@ img {
   border-color: #51a7e8;
   box-shadow: inset 0 1px 2px rgba(0,0,0,0.075),0 0 5px rgba(81,167,232,0.5);
 }
+.input__full {
+  width: 100%;
+}
+
 
 .formGroup {
   margin-bottom: 1em;
@@ -184,15 +188,15 @@ img {
 }
 
 .notice--success {
-  border-top-color: #a4d178;
+  border-color: #a4d178;
   background-color: #8aba56;
 }
 .notice--info {
-  border-top-color: #85aed3;
+  border-color: #85aed3;
   background-color: #618fb9;
 }
 .notice--warning {
-  border-top-color: #fb6161;
+  border-color: #fb6161;
   background-color: #df3b3b;
 }
 
@@ -205,4 +209,42 @@ img {
 .cart li {
   list-style: none;
   border-bottom: 1px solid #DDD;
+}
+
+
+
+/*pageAuth*/
+* {
+  box-sizing: border-box;
+}
+.pull-right {
+  float:right;
+}
+.pull-left { 
+  float:left; 
+}
+.pageAuth {
+  background: #724B5C;
+  color: #FFF;
+  margin: 0 auto;
+}
+.pageAuth--container {
+  max-width: 24rem;
+  margin: 0px auto;
+}
+.pageAuth--form {
+  margin-bottom: 2em;
+}
+.pageAuth--switch {
+  text-align: center;
+}
+.pageAuth--header {
+  margin-bottom: 2em;
+}
+.pageAuth--h1 a {
+  color:#FFF;
+}
+.pageAuth--h2 {
+  color: rgba(130, 88, 106, 0.9);
+  font-size: 1.5em;
 }
