--- a/app/views/pages/card_post.ejs
+++ b/app/views/pages/card_post.ejs
@@ -8,7 +8,7 @@
         <h1><%= pageTitle %></h1>
   	<form method="post" action="<%= typeof card=='undefined' ? '/cards/post' : '/cards/'+card._id+'/edit' %>"  enctype="multipart/form-data">
   		
-  		<div class="formGroup formGroup--stacked">
+  		<div class="formGroup formGroup__stacked">
   			<label for="title">Name your card</label> 
   			<input type="text" 
   				name="title" 
@@ -19,19 +19,19 @@
   		</div>
 
 
-  		<div class="formGroup formGroup--stacked">
+  		<div class="formGroup formGroup__stacked">
   			<label for="description">Describe your card</label>
   			<textarea id="description" name="description" class="input"><%= typeof card!='undefined' ? card.description : '' %></textarea>
   		</div>
   			
 
-  		<div class="formGroup formGroup--stacked">
+  		<div class="formGroup formGroup__stacked">
   			<label for="price">Price</label>
   			<input type="text" name="price" class="input" id="price" placeholder="$" value="<%= typeof card!='undefined' ? card.attr.price : '' %>">
   		</div>
 
 
-  		<div class="formGroup formGroup--stacked">
+  		<div class="formGroup formGroup__stacked">
   			<% if(typeof card!='undefined') { %>
   				<div>
   					<img src="<%= card.image %>" alt="<%= card.title %>" />
@@ -42,10 +42,9 @@
   			<input type="file" id="image" name="image" />
   		</div>
 
-  		<br><br><br>
 
-  		<div class="formGroup formGroup--stacked">
-  			<input type="submit" value="Submit" class="btn btn--primary">
+  		<div class="formGroup formGroup__stacked">
+  			<input type="submit" value="Submit" class="btn btn__primary">
   		</div>
   	</form>
 
