--- a/app/views/pages/card_single.ejs
+++ b/app/views/pages/card_single.ejs
@@ -29,7 +29,7 @@
                 </form>
                 <br><br>
                 <form  method="post" action="/<%=auth_user.username %>/<%=card._id %>/addToCart">
-                    <input type="submit" class="btn btn--primary" value="Add to Cart"  />
+                    <input type="submit" class="btn btn__primary" value="Add to Cart"  />
                 </form>
             <% } %>
 
