--- a/app/views/pages/cart.ejs
+++ b/app/views/pages/cart.ejs
@@ -39,7 +39,7 @@
                 </li>
             </ul>
             
-            <input type="submit" value="Checkout" class="btn btn--primary" >
+            <input type="submit" value="Checkout" class="btn btn__primary" >
             <%  }   %>
 
         </div>
