--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -6,7 +6,7 @@ body {
     font-weight: 400;
     line-height:1.6;font-size:18px;
     color:#444;
-    background: #FFF;
+    background: #F7E9D7;
     margin: 0;
 }
 h1, h2, h3, h4 {
@@ -26,9 +26,9 @@ a:hover {
     margin: 0 auto;
 }
 .layout_nav {
-    background:#EEE;
+    background:#724B5C;
     padding: 2em; 
-    border-bottom: 1px solid #DDD;
+    border-bottom: 1px solid #724B5C;
     margin-bottom:24px;
 }
 .layout_nav a {
