--- a/app/views/pages/register.ejs
+++ b/app/views/pages/register.ejs
@@ -3,29 +3,29 @@
 <body class="pageAuth">
 	<% include ../partials/flash %>
     <div class="pageAuth--container">
-	    <div class="innerWrap">
+	    <div class="pageAuth--innerWrap">
 	        
 	        <header class="pageAuth--header">
 	         	<h1 class="pageAuth--h1"><a href="/" >Greeting Cardinal</a></h1>
 				<h2 class="pageAuth--h2"><%= pageTitle %></h2>
 	        </header>
 	        <form accept-charset="UTF-8" method="post" class="pageAuth--form">
-				<div class="formGroup formGroup--stacked">
+				<div class="formGroup formGroup__stacked">
 					<label for="email">Email</label>
 					<input type="email" name="email" id="email"  tabindex="1" autocorrect="off" autocapitalize="off" autofocus="true" class="input input__full">
 				</div>
 
-				<div class="formGroup formGroup--stacked">
+				<div class="formGroup formGroup__stacked">
 					<label for="username">Username</label>
 					<input type="username" name="username" id="username" value="" tabindex="2" autocorrect="off" class="input input__full" >
 				</div>
 
-				<div class="formGroup formGroup--stacked">
+				<div class="formGroup formGroup__stacked">
 					<label for="password">Password</label>
 					<input type="password" name="password" id="password" value="" tabindex="3" autocorrect="off" class="input input__full">
 				</div>
 				
-				<input class="btn btn--primary" type="submit"  value="Register" tabindex="4">
+				<input class="btn btn__primary" type="submit"  value="Register" tabindex="4">
 
 			</form>
 
