--- a/app/views/pages/signin.ejs
+++ b/app/views/pages/signin.ejs
@@ -3,27 +3,27 @@
 <body class="pageAuth">
 	<% include ../partials/flash %>
     <div class="pageAuth--container">
-	    <div class="innerWrap">
+	    <div class="pageAuth--innerWrap">
 	       	<header class="pageAuth--header">
 	         	<h1 class="pageAuth--h1"><a href="/" >Greeting Cardinal</a></h1>
 				<h2 class="pageAuth--h2"><%= pageTitle %></h2>
 	        </header>
 
 	        <form accept-charset="UTF-8" method="post" class="pageAuth--form">
-				<div class="formGroup formGroup--stacked">
+				<div class="formGroup formGroup__stacked">
 					<label for="username">Username or Email</label>
 					<input type="text" name="username" id="username" value="" tabindex="1" autocorrect="off" autocapitalize="off" autofocus="true" class="input input__full">
 				</div>
 
-				<div class="formGroup formGroup--stacked">
+				<div class="formGroup formGroup__stacked">
 					<label for="password">Password</label>
 					<input type="password" name="password" id="password" value="" tabindex="2" class="input input__full">
 				</div>
 
 				<div class="clearfix">
-					<input type="submit" value="Sign In" class="btn btn--primary" tabindex="3" class="pull-left">
+					<input type="submit" value="Sign In" class="btn btn__primary" tabindex="3" class="pull-left">
 
-					<div class="formGroup formGroup--stacked pull-right">
+					<div class="formGroup formGroup__stacked pull-right">
 						<label for="remember">
 							<input type="checkbox" id="remember" name="remember" value="remember" checked="checked"> Remember me
 						</label>
