--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@ body {
     font-weight: 400;
     line-height:1.6;font-size:18px;
     color:#444;
-    background: #FFF;
+    background: #F7E9D7;
     margin: 0;
 }
 h1, h2, h3, h4 {
@@ -15,11 +15,12 @@ h1, h2, h3, h4 {
     line-height:1.2
 }
 a, a:visited, a:hover {
-    color:#FE6A5D;
+    color:#724B5C;
     text-decoration: none;
 }
 a:hover {
     text-decoration: underline;
+    color:#583B48;
 }
 .container {
     width: 960px;
@@ -30,13 +31,18 @@ a:hover {
   padding: 20px 12px 30px 12px
 }
 .layout_nav {
-    background:#EEE;
+    background:#724B5C;
     padding: .75em; 
-    border-bottom: 1px solid #DDD;
+    border-bottom: 1px solid #724B5C;
 }
 .layout_nav a {
+    color: #B3899B;
     margin-right: 1em;
     font-size: 1.15em;
+}
+.layout_nav a:hover {
+    color: #FFF;
+    text-decoration: none;
 }
 .layout_nav .credentials {
     float: right;
@@ -117,15 +123,15 @@ img {
   cursor: pointer;
 }
 
-.btn--primary {
-    background-color: #4183c4;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#4183c4), to(#3c78b5));
-    background-image: -webkit-linear-gradient(top, #4183c4, #3c78b5);
-    background-image: -moz-linear-gradient(top, #4183c4, #3c78b5);
-    background-image: -ms-linear-gradient(top, #4183c4, #3c78b5);
-    background-image: -o-linear-gradient(top, #4183c4, #3c78b5);
-    background-image: linear-gradient(top, #4183c4, #3c78b5);
-    border: 1px solid #2a5b8d;
+.btn__primary {
+    background-color: #09B232;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#09B232), to(#14CC41));
+    background-image: -webkit-linear-gradient(top, #09B232, #14CC41);
+    background-image: -moz-linear-gradient(top, #09B232, #14CC41);
+    background-image: -ms-linear-gradient(top, #09B232, #14CC41);
+    background-image: -o-linear-gradient(top, #09B232, #14CC41);
+    background-image: linear-gradient(top, #09B232, #14CC41);
+    border: 1px solid #0F912E;
     border-radius: 4px;
     color: #fff;
     display: inline-block;
@@ -163,7 +169,7 @@ img {
 .formGroup {
   margin-bottom: 1em;
 }
-.formGroup--stacked label {
+.formGroup__stacked label {
   display: block;
 }
 
@@ -224,7 +230,7 @@ img {
   float:left; 
 }
 .pageAuth {
-  background: #724B5C;
+  background-color: #724B5C;
   color: #FFF;
   margin: 0 auto;
 }
@@ -232,19 +238,31 @@ img {
   max-width: 24rem;
   margin: 0px auto;
 }
+.pageAuth--innerWrap {
+    background: #fff;    
+    -webkit-border-radius: 3px;    
+    -moz-border-radius: 3px;    
+    border-radius: 3px;    
+    -webkit-box-shadow: 0 1px 6px rgba(0,0,0,0.25);    
+    -moz-box-shadow: 0 1px 6px rgba(0,0,0,0.25);    
+    box-shadow: 0 1px 6px rgba(0,0,0,0.25);    
+    padding: 24px;
+    color: #333;
+    margin-top: 48px;
+}
 .pageAuth--form {
   margin-bottom: 2em;
 }
 .pageAuth--switch {
   text-align: center;
 }
+
 .pageAuth--header {
   margin-bottom: 2em;
 }
-.pageAuth--h1 a {
-  color:#FFF;
-}
+
 .pageAuth--h2 {
-  color: rgba(130, 88, 106, 0.9);
+  font-family: 'Roboto Condensed', sans-serif;
+  color: #B3899B;
   font-size: 1.5em;
 }
