--- a/app/views/partials/head.ejs
+++ b/app/views/partials/head.ejs
@@ -5,6 +5,5 @@
     <meta charset="UTF-8">
     <title><%= docTitle %></title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Bitter:700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lato:400,900' rel='stylesheet' type='text/css'>
 </head>
