--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 body {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-weight: 400;
     line-height:1.6;font-size:18px;
     color:#444;
@@ -10,8 +10,8 @@ body {
     margin: 0;
 }
 h1, h2, h3, h4 {
-    font-family: 'Bitter', serif;
-    font-weight: 700;
+    font-family: 'Lato', sans-serif;
+    font-weight: 900;
     line-height:1.2
 }
 a, a:visited, a:hover {
