--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@ body {
     font-weight: 400;
     line-height:1.6;font-size:18px;
     color:#444;
-    background: #F7E9D7;
+    background: #eee;
     margin: 0;
 }
 h1, h2, h3, h4 {
@@ -31,17 +31,17 @@ a:hover {
   padding: 20px 12px 30px 12px
 }
 .layout_nav {
-    background:#724B5C;
+    background:#FFF;
     padding: .75em; 
-    border-bottom: 1px solid #724B5C;
+    border-bottom: 1px solid #EEE;
 }
 .layout_nav a {
-    color: #B3899B;
+    color: #666;
     margin-right: 1em;
     font-size: 1.15em;
 }
 .layout_nav a:hover {
-    color: #FFF;
+    color: #333;
     text-decoration: none;
 }
 .layout_nav .credentials {
@@ -115,29 +115,31 @@ img {
   -moz-border-radius: 3px;
   -o-border-radius: 3px;
   border-radius: 3px;
+  display: block;
+  cursor: pointer;
+}
+.btn:hover {
   -webkit-box-shadow: 0 1px 1px 0 rgba(0,0,0,0.3);
   -moz-box-shadow: 0 1px 1px 0 rgba(0,0,0,0.3);
   -o-box-shadow: 0 1px 1px 0 rgba(0,0,0,0.3);
   box-shadow: 0 1px 1px 0 rgba(0,0,0,0.3);
-  display: block;
-  cursor: pointer;
 }
 
 .btn__primary {
-    background-color: #09B232;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#09B232), to(#14CC41));
-    background-image: -webkit-linear-gradient(top, #09B232, #14CC41);
-    background-image: -moz-linear-gradient(top, #09B232, #14CC41);
-    background-image: -ms-linear-gradient(top, #09B232, #14CC41);
-    background-image: -o-linear-gradient(top, #09B232, #14CC41);
-    background-image: linear-gradient(top, #09B232, #14CC41);
-    border: 1px solid #0F912E;
+    background-color: #724B5C;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#724B5C), to(#774058));
+    background-image: -webkit-linear-gradient(top, #724B5C, #774058);
+    background-image: -moz-linear-gradient(top, #724B5C, #774058);
+    background-image: -ms-linear-gradient(top, #724B5C, #774058);
+    background-image: -o-linear-gradient(top, #724B5C, #774058);
+    background-image: linear-gradient(top, #724B5C, #774058);
+    border: 1px solid transparent;
     border-radius: 4px;
     color: #fff;
     display: inline-block;
-    font-family: "OpenSansBold","Helvetica Neue",Helvetica,Arial,sans-serif;
     padding: 12px 40px;
-    text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
+    text-shadow: 0 1px rgba(0,0,0,0.1);
+    text-transform: uppercase;
 }
 
 
@@ -230,8 +232,6 @@ img {
   float:left; 
 }
 .pageAuth {
-  background-color: #724B5C;
-  color: #FFF;
   margin: 0 auto;
 }
 .pageAuth--container {
