--- a/app/views/pages/register.ejs
+++ b/app/views/pages/register.ejs
@@ -5,8 +5,8 @@
     <div class="pageAuth--container">
 	    <div class="pageAuth--innerWrap">
 	        
-	        <header class="pageAuth--header">
-	         	<h1 class="pageAuth--h1"><a href="/" >Greeting Cardinal</a></h1>
+	        <header class="pTitleHeader">
+	         	<h1 class="pTitleHeader--title"><a href="/" >Greeting Cardinal</a></h1>
 				<h2 class="pageAuth--h2"><%= pageTitle %></h2>
 	        </header>
 	        <form accept-charset="UTF-8" method="post" class="pageAuth--form">
@@ -29,7 +29,7 @@
 
 			</form>
 
-			<p class="pageAuth--switch">Have an account? <a href="/i/signin">Sign in</a></p>
+			<p class="pageAuth--switch">Have an account? <a href="/signin">Sign in</a></p>
 	    </div>
     </div>
 
