--- a/app/views/pages/signin.ejs
+++ b/app/views/pages/signin.ejs
@@ -4,8 +4,9 @@
 	<% include ../partials/flash %>
     <div class="pageAuth--container">
 	    <div class="pageAuth--innerWrap">
-	       	<header class="pageAuth--header">
-	         	<h1 class="pageAuth--h1"><a href="/" >Greeting Cardinal</a></h1>
+	       	
+	       	<header class="pTitleHeader">
+	         	<h1 class="pTitleHeader--title"><a href="/" >Greeting Cardinal</a></h1>
 				<h2 class="pageAuth--h2"><%= pageTitle %></h2>
 	        </header>
 
@@ -34,7 +35,7 @@
 				
 			</form>
 
-			<p class="pageAuth--switch">Not a member? <a href="/i/register">Register</a></p>
+			<p class="pageAuth--switch">Not a member? <a href="/register">Register</a></p>
 
 	    </div>
     </div>
