--- a/public/css/style.css
+++ b/public/css/style.css
@@ -155,6 +155,23 @@ img {
     text-shadow: 0 1px rgba(0,0,0,0.1);
     text-transform: uppercase;
 }
+.btn__secondary {
+    background-color: #DDD;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#DDD), to(#EEE));
+    background-image: -webkit-linear-gradient(top, #DDD, #EEE);
+    background-image: -moz-linear-gradient(top, #DDD, #EEE);
+    background-image: -ms-linear-gradient(top, #DDD, #EEE);
+    background-image: -o-linear-gradient(top, #DDD, #EEE);
+    background-image: linear-gradient(top, #DDD, #EEE);
+    border: 1px solid #d5d5d5;
+    border-radius: 4px;
+    color: #666;
+    display: inline-block;
+    padding: 12px 40px;
+    text-shadow: 0 1px rgba(0,0,0,0.1);
+    text-transform: uppercase;
+}
+
 
 
 .input {
@@ -173,7 +190,7 @@ img {
   font: 13px/1.4 Helvetica, arial, nimbussansl, liberationsans, freesans, clean, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
-.input--focus, input:focus {
+.input__focus, input:focus, textarea:focus {
   border-color: #51a7e8;
   box-shadow: inset 0 1px 2px rgba(0,0,0,0.075),0 0 5px rgba(81,167,232,0.5);
 }
@@ -187,6 +204,7 @@ img {
 }
 .formGroup__stacked label {
   display: block;
+  margin: 0 0 6px;
 }
 
 
