--- a/app/views/pages/cart.ejs
+++ b/app/views/pages/cart.ejs
@@ -32,13 +32,12 @@
                             </div>
                         </div>
                     </li>
-
                 <%  }   %>
                 <li>
-                    total: <%= total_price %>
+                    total: <%= totalPrice %>
                 </li>
             </ul>
-            
+            <br>
             <input type="submit" value="Checkout" class="btn btn__primary" >
             <%  }   %>
 
